<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.alexeysushko.carandpeopleproject.activities.ActivityAdd">

    <EditText
        android:id="@+id/activity_add_edittext_fio"
        android:hint="@string/activity_add_edit_text_fio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/activity_add_edittext_year_birth"
        android:hint="@string/activity_add_edit_text_birthday"
        android:inputType="numberDecimal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/activity_add_edittext_adress"
        android:hint="@string/activity_add_edit_text_adress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/activity_add_edittext_marka_auto"
        android:hint="@string/activity_add_edit_text_marka_auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/activity_add_edittext_model_auto"
        android:hint="@string/activity_add_edit_text_model_auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/activity_add_edittext_year_auto"
        android:hint="@string/activity_add_edit_text_year_auto"
        android:inputType="numberDecimal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/activity_add_edittext_serial_number"
        android:hint="@string/activity_add_edit_text_serial_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/activity_add_edittext_state_number"
        android:hint="@string/activity_add_edit_text_state_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/activity_add_edittext_comment"
        android:hint="@string/activity_add_edit_text_comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/activity_add_button_add"
        android:text="@string/activity_add_button_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"/>


</LinearLayout>
